tests/files/ok/ThrowVar.krna


fn f() {
    let v = java::lang::RuntimeException { _: "test" }
    throw v
}