tests/files/fail/PrivateRecordValue.krna


fn f() {
    let secretValue: Integer = (Option$Some { _: 2 }).value
}